Changed to use .part suffix while encoding the video. When done, it deletes failed partial files and renames completed files to the final name. This should reduce the amount of "junk" left behind from failed encodes.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -143,7 +143,7 @@
 			<TextBlock Style="{StaticResource QueueText}" Text="{Binding RangeDisplay}" />
 		</DataTemplate>
 		<DataTemplate x:Key="QueueTemplateDestination" DataType="viewmodel:EncodeJobViewModel">
-			<controls:PathTextBlock Style="{StaticResource QueuePathText}" Text="{Binding Job.OutputPath}" />
+			<controls:PathTextBlock Style="{StaticResource QueuePathText}" Text="{Binding Job.FinalOutputPath}" />
 		</DataTemplate>
 		<DataTemplate x:Key="QueueTemplateVideoEncoder" DataType="viewmodel:EncodeJobViewModel">
 			<TextBlock Style="{StaticResource QueueText}" Text="{Binding VideoEncoderDisplay}" />
